# ast-scan

./: .gitignore  CLAUDE.md  LICENSE  README.md  ast-scan-self-report.txt
.github/workflows/: ci.yml
docs/: RUST_PARALLELISM.md
docs/superpowers/plans/: 2026-03-25-feature-batch.md
fixtures/minimal-py/: mutable_defaults.py  star_consumer.py
fixtures/minimal-py/pkg/: __init__.py  util.py
fixtures/minimal-ts/: lib.ts
python/: pyproject.toml
python/ast_scan/: __init__.py  __main__.py  scan.py
rust/: Cargo.toml
rust/src/: audits.rs  clones.rs  graph.rs  main.rs  scanner.rs  secrets.rs  ts_checks.rs  types.rs
rust/src/python_scanner/: file.rs  mod.rs  visitors.rs
rust/src/report/: mod.rs  python.rs  rust_report.rs  typescript.rs
rust/src/rust_scanner/: file.rs  mod.rs  visitors.rs
rust/src/ts_scanner/: file.rs  mod.rs  visitors.rs
rust/tests/: integration.rs
scripts/: self_scan_insights.py
typescript/: package-lock.json  package.json
typescript/src/: scan.ts
