[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ast-scan"
version = "0.1.0"
description = "AST-based codebase health scanner for Python packages"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ast-scan contributors" }]
keywords = ["ast", "static-analysis", "complexity", "imports"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
ast-scan = "ast_scan.scan:main"

[tool.hatch.build.targets.wheel]
packages = ["ast_scan"]
