[package]
name = "ast-scan"
version = "0.1.1"
edition = "2021"
description = "AST-based codebase health scanner (Python, TypeScript, Rust)"
license = "MIT"
repository = "https://github.com/nitaiaharoni1/ast-scan"

[[bin]]
name = "ast-scan"
path = "src/main.rs"

[dependencies]
rustpython-parser = "0.4"
oxc_parser = "0.122"
oxc_allocator = "0.122"
oxc_span = "0.122"
oxc_ast = "0.122"
oxc_syntax = "0.122"
oxc_ast_visit = "0.122"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
rayon = "1"
anyhow = "1"
thiserror = "1"
syn = { version = "2", features = ["full", "parsing", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
serde_json = "1"
